@@ -1,3 +1,8 @@
+2009-10-29  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/decimal/decimal: Minor formatting and uglification fixes.
+	* include/decimal/decimal.h: Likewise.
+
 2009-10-28  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/bits/stl_iterator_base_funcs.h: (next): Change
